nrm => cnpm OK ✅

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,13 @@
     <p>copyright&copy; xgqfrms 2020</p>
   </footer>
   <!-- js -->
+  <script>
+    const app = document.querySelector(`#app`);
+    app.innerHTML = ``;
+    app.insertAdjacentHTML(`beforeend`, `<p>Node.js version = ${process.versions.node}</p>`);
+    app.insertAdjacentHTML(`beforeend`, `<p>Chrome version= ${process.versions.chrome}</p>`);
+    app.insertAdjacentHTML(`beforeend`, `<p>Electron version = ${process.versions.electron}</p>`);
+  </script>
   <!-- <script src="./index.js"></script> -->
 </body>
 </html>
